objects/Revenue_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Average_Sales_Price__c</fullName>
        <label>Average Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GMPL_BX009__c</fullName>
        <label>GMPL/BX009</label>
        <referenceTo>GMPL_BX009__c</referenceTo>
        <relationshipName>Revenue_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <formula>Average_Sales_Price__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>GMPL Revenue Forecast</label>
    <nameField>
        <displayFormat>RF-{00000}</displayFormat>
        <label>Revenue Forecast ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GMPL Revenue Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>